--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -4,20 +4,24 @@ without_description_pending:
   title: Add authentication
   status: pending
   user: facundo_espinosa
+  list: work
 
 without_description_complete:
   title: Setup Hotwire
   status: complete
   user: facundo_espinosa
+  list: work
 
 with_description_pending:
   title: Buy watermelon
   description: I need to buy a watermelon for my birthday party
   status: pending
   user: facundo_espinosa
+  list: groceries
 
 with_description_complete:
   title: Buy bananas
   description: I need to buy bananas because I'm like a monkey
   status: complete
   user: facundo_espinosa
+  list: groceries
